@@ -19,6 +19,7 @@ sed "s/^VERSION = .*/VERSION = $VERSION/" omd/Makefile > $OMD/Makefile
 mkdir -p $OMD/skel/etc/init.d
 install -m 755 omd/mkeventd.init $OMD/skel/etc/init.d/mkeventd
 install -m 755 omd/MKEVENTD.hook $OMD
+install -m 755 omd/MKEVENTD_SYSLOG.hook $OMD
 mkdir -p $OMD/skel/etc/logrotate.d/
 install -m 644 omd/logrotate.conf $OMD/skel/etc/logrotate.d/mkeventd
 mkdir -p $OMD/skel/var/log/mkeventd
@@ -35,4 +36,5 @@ if [ -n "$SITE" -a -e "/omd/sites/$SITE" ] ; then
     sudo install -o $SITE -g $SITE -v -m 644 omd/logrotate.conf /omd/sites/$SITE/etc/logrotate.d/mkeventd
     sudo sed -i "s@###ROOT###@/omd/sites/$SITE@g" /omd/sites/$SITE/etc/logrotate.d/mkeventd
     sudo install -d -o $SITE -g $SITE /omd/sites/$SITE/var/log/mkeventd
+    sudo install -m 755 omd/MKEVENTD_SYSLOG.hook /omd/sites/$SITE/lib/omd/hooks/MKEVENTD_SYSLOG
 fi
