@@ -1,0 +1,25 @@
+#!/bin/bash
+
+# Alias: Enable Builtin Syslog Server
+# Menu: Addons
+# Description: 
+#  If this option is enabled then mkeventd starts a builtin syslog
+#  server that receives syslog messages via UDP port 514. Local messages
+#  via /dev/log are not being received, so you can keep your local
+#  syslog server running as long as it does not open UDP port 514.
+#  Enabling this option makes the mkeventd started via a SUID helper
+#  that first opens the (priviledged) port 514 and then starting the
+#  actual event daemon.
+
+case "$1" in
+    default)
+        echo "off"
+    ;;
+    choices)
+        echo "on: enable"
+        echo "off: disable"
+    ;;
+    depends)
+        [ "$CONFIG_MKEVENTD" = on ]
+    ;;
+esac
